--- a/TodayNasa/package.json
+++ b/TodayNasa/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Chatbot-educacional.github.io/Chatbot-educacional",
+  "homepage": " https://mendes113.github.io/todayNasa/",
   "name": "chatapp",
   "private": true,
   "version": "0.0.0",
