--- a/TodayNasa/package.json
+++ b/TodayNasa/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.14.2",
     "@mui/x-data-grid": "^6.10.2",
     "bootstrap": "^5.3.1",
+    "file-saver": "^2.0.5",
     "firebase": "^8.6.8",
     "flowbite": "^1.8.0",
     "flowbite-react": "^0.5.0",
