fix: :bug: start page open on home page
Agora a pagina quando iniciada é direcionada para a home, anteriormente a é direcionada a um route não existente

route fix

--- a/TodayNasa/package.json
+++ b/TodayNasa/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": " https://mendes113.github.io/todayNasa/",
+  "homepage": " https://mendes113.github.io",
   "name": "chatapp",
   "private": true,
   "version": "0.0.0",
